# cpplogging

./: CMakeLists.txt  README.md
includes/: Loggable.h
includes/cpplogging/: Loggable.h  Logger.h  types.h
src/: Loggable.cpp  Logger.cpp
